# sib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  Roadmap.md  SECURITY.md  build.rs  clang-format.sh  coverage.sh  trace.127.0.0.1.34951.1746894688.Wg32FY.0.1.xml  tune.sh
.cargo/: config.toml
.github/workflows/: build.yml
bash/: fdb.sh  foundationDB.sh  gpg.sh  init_fdb.sh
bench/: database.hpp  h3_test.py  main.cpp  network.hpp  system.hpp
cmake/: bench.cmake  clang.cmake  techempower.cmake  test.cmake
dep/: build.sh  const.sh  foundationDB.sh  seastar.sh
sib/: sib.cpp  sib.hpp
sib/database/: s_fdb.hpp  s_fdb_future.hpp  s_fdb_pool.cpp  s_fdb_pool.hpp  s_fdb_trans.cpp  s_fdb_trans.hpp
sib/network/: s_http_server.cpp  s_http_server.hpp  s_ip_rate_limiter.cpp  s_ip_rate_limiter.hpp  s_proxygen_server.cpp  s_proxygen_server.hpp  s_rate_limiter.cpp  s_rate_limiter.hpp  s_tcp_gate_keeper.cpp  s_tcp_gate_keeper.hpp  w_http_server.cpp  w_http_server.hpp
sib/system/: s_buffer.cpp  s_buffer.hpp  s_defer.hpp  s_htobe64.hpp  s_trace.cpp  s_trace.hpp
src/: lib.rs  main.rs
src/database/: mod.rs
src/database/fdb/: cache.rs  db.rs  future.rs  mod.rs  network.rs  pool.rs  trans.rs
src/network/: callback.rs  kafka_cli.rs  mod.rs  ratelimit.rs  udp.rs
src/network/http/: ban.rs  client.rs  date.rs  file.rs  h1.rs  h1_server.rs  h1_session.rs  h1_session_async.rs  h1_session_over_h2.rs  h2_server.rs  h2_session.rs  h3.rs  h3_server.rs  h3_session.rs  handler.rs  message.rs  mod.rs  param.rs  ratelimit.rs  reader.rs  request.rs  resolver.rs  response.rs  rlid.rs  server copy.rs  server.rs  session.rs  status.rs  tls.rs  util.rs  ws.rs  wt.rs
src/network/http/serve/: file.rs
src/network/http/wtrans/: server.rs
src/render/: bind_group.rs  buffer.rs  camera.rs  context.rs  mesh.rs  mod.rs  render_pass.rs  runner.rs  shader.rs  stats.rs  text.rs  text_mesh.rs  texture.rs  web.rs
src/stream/: control.rs  mod.rs  receiver.rs  sender.rs  webrtc.html  webrtc.rs
src/system/: buffer.rs  cache.rs  callback.rs  compress.rs  fdb.rs  log.rs  memcached.rs  mod.rs
techempower/: Cargo.toml  README.md  main.cpp  run.sh  sib.dockerfile
techempower/src/: main.rs
test/: database.hpp  main.cpp  network.hpp  system.hpp
tests/: h1_regression.rs  h2_multiplex.rs
tests/unit/database/fdb/: cache_tests.rs  network_tests.rs  pool_tests.rs  shared.rs  trans_tests.rs
tests/unit/network/: kafka_cli_tests.rs
tests/unit/network/http/: file_tests.rs  ratelimit_tests.rs  rlid_tests.rs  server_tests.rs
tests/unit/stream/: receiver_tests.rs  sender_tests.rs  webrtc_tests.rs
wolf/: wolf.cpp  wolf.hpp
wolf/database/: w_fdb.hpp  w_fdb_future.hpp  w_fdb_pool.cpp  w_fdb_pool.hpp  w_fdb_trans.cpp  w_fdb_trans.hpp
wolf/system/: w_buffer.cpp  w_buffer.hpp  w_defer.hpp  w_htobe64.hpp  w_trace.cpp  w_trace.hpp
