[package]
name = "sib"
version = "0.0.12"
authors = ["mail@pooya.ai"]
description = "A high-performance, secure, and cross-platform modules optimized for efficiency, scalability, and reliability."
documentation = "https://docs.rs/sib"
edition = "2024"
keywords = ["sib", "networking", "real-time", "streaming", "web"]
license = "Apache-2.0"
repository = "https://github.com/PooyaEimandar/sib"
categories = ["development-tools"]
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
arc-swap = { version = "1.7.1", optional = true, default-features = false }
async-trait = { version = "0.1.89", optional = true, default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false, features = [
    "std",
] }
boring = { version = "4.19.0", optional = true }
brotli = { version = "8.0.2", optional = true, default-features = false, features = [
    "std",
] }
bytes = { version = "1.10.1", optional = true, default-features = false }
cfg-if = { version = "1.0.3", default-features = false }
crossbeam = { version = "0.8.4", optional = true, default-features = false, features = [
    "std",
] }
dashmap = { version = "6.1.0", optional = true, default-features = false, features = [
    "rayon",
] }
flate2 = { version = "1.1.2", optional = true, default-features = false, features = [
    "rust_backend",
] }
futures-lite = { version = "2.6.1", optional = true, default-features = false, features = [
    "race",
    "std",
] }
glib = { version = "0.21.1", optional = true, default-features = false, features = [
    "gio",
] }
gstreamer = { version = "0.24.1", optional = true }
gstreamer-app = { version = "0.24.0", optional = true }
gstreamer-video = { version = "0.24.1", optional = true }
h2 = { version = "0.4.12", optional = true, default-features = false }
heapless = { version = "0.9.1", optional = true, default-features = false }
http = { version = "1.3.1", optional = true, default-features = false, features = [
    "std",
] }
httparse = { version = "1.10.1", optional = true, default-features = false }
httpdate = { version = "1.0.3", optional = true, default-features = false }
may = { version = "0.3.51", optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = { version = "2.0.5", optional = true }
memmap2 = { version = "0.9.8", optional = true, default-features = false }
once_cell = { version = "1.21.3", optional = true, default-features = false, features = [
    "std",
] }
rustls = { version = "0.23.31", optional = true, default-features = false, features = [
    "aws_lc_rs",
    "prefer-post-quantum",
    "std",
    "tls12",
] }
rustls-pemfile = { version = "2.2.0", optional = true, default-features = false, features = [
    "std",
] }
sha1 = { version = "0.10.6", optional = true, default-features = false, features = [
    "std",
] }
socket2 = { version = "0.6.0", optional = true, default-features = false, features = [
    "all",
] }
tokio = { version = "1.47.1", optional = true, default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tokio-rustls = { version = "0.26.3", optional = true, default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
zstd = { version = "0.13.3", optional = true }

# unix (non-android/ios) only deps
[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "ios")))'.dependencies]
foundationdb-sys = { version = "0.9.1", optional = true, default-features = false, features = [
    "fdb-7_3",
] }

# linux-only deps
[target.'cfg(target_os = "linux")'.dependencies]
futures-rustls = { version = "0.26.0", optional = true, default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
glommio = { version = "0.9.0", optional = true, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
quinn = { version = "0.11.9", optional = true, default-features = false, features = [
    "runtime-async-std",
    "rustls",
] }

[features]
default = []
db-fdb = ["foundationdb-sys"]
net-file-server = [
    "brotli",
    "dashmap",
    "flate2",
    "httpdate",
    "memmap2",
    "mime_guess",
    "mime",
    "zstd",
]
net-h1-server = [
    "async-trait",
    "arc-swap",
    "boring",
    "bytes",
    "dashmap",
    "heapless",
    "http",
    "httpdate",
    "httparse",
    "may",
    "once_cell",
    "socket2",
]
net-h2-server = [
    "async-trait",
    "bytes",
    "dashmap",
    "futures-lite",
    "h2",
    "http",
    "rustls",
    "rustls-pemfile",
    "socket2",
]
net-h3-server = [
    "async-trait",
    "bytes",
    "dashmap",
    "futures-lite",
    "h3",
    "h3-quinn",
    "http",
    "quinn",
    "rustls",
    "rustls-pemfile",
    "socket2",
    "tokio",
]
net-ws-server = ["base64", "sha1"]

rt-glommio = ["futures-rustls", "glommio", "tokio"]
rt-tokio = ["tokio", "tokio-rustls"]

stm-sender = ["crossbeam", "glib", "gstreamer", "gstreamer-video"]
stm-receiver = ["glib", "gstreamer", "gstreamer-app", "gstreamer-video"]

[dev-dependencies]
base64 = { version = "0.22.1" }
dashmap = { version = "6.1.0", default-features = false, features = ["rayon"] }
http = { version = "1.3.1", default-features = false, features = ["std"] }
num_cpus = { version = "1.17.0" }
rcgen = { version = "0.14.3" }
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "http2",
    "http3",
] }
rustls = { version = "0.23.31", default-features = false, features = [
    "aws_lc_rs",
    "prefer-post-quantum",
    "std",
    "tls12",
] }
sha2 = { version = "0.10.9" }
tungstenite = { version = "0.28.0" }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
] }

[build-dependencies]
chrono = { version = "0.4.42" }
