[package]
name = "sib"
version = "0.0.15"
authors = ["mail@pooya.ai"]
description = "A high-performance, secure, and cross-platform modules optimized for efficiency, scalability, and reliability."
documentation = "https://docs.rs/sib"
edition = "2024"
keywords = ["sib", "networking", "real-time", "streaming", "web"]
license = "Apache-2.0"
repository = "https://github.com/PooyaEimandar/sib"
categories = ["development-tools"]
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
arc-swap = { version = "1.7.1", optional = true, default-features = false }
async-trait = { version = "0.1.89", optional = true, default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false, features = [
    "std",
] }
boring = { version = "4.19.0", optional = true }
brotli = { version = "8.0.2", optional = true, default-features = false, features = [
    "std",
] }
bytes = { version = "1.10.1", optional = true, default-features = false }
cfg-if = { version = "1.0.4", default-features = false }
crossbeam = { version = "0.8.4", optional = true, default-features = false, features = [
    "std",
] }
dashmap = { version = "6.1.0", optional = true, default-features = false, features = [
    "rayon",
] }
flate2 = { version = "1.1.5", optional = true, default-features = false, features = [
    "rust_backend",
] }
futures-lite = { version = "2.6.1", optional = true, default-features = false, features = [
    "race",
    "std",
] }
glib = { version = "0.21.4", optional = true, default-features = false, features = [
    "gio",
] }
governor = { version = "0.10.1", optional = true }
gstreamer = { version = "0.24.3", optional = true }
gstreamer-app = { version = "0.24.2", optional = true }
gstreamer-video = { version = "0.24.3", optional = true }
h2 = { version = "0.4.12", optional = true, default-features = false }
heapless = { version = "0.9.2", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true }
http = { version = "1.3.1", optional = true, default-features = false, features = [
    "std",
] }
hmac = { version = "0.12.1", optional = true, default-features = false }
httparse = { version = "1.10.1", optional = true, default-features = false }
httpdate = { version = "1.0.3", optional = true, default-features = false }
hyper = { version = "1.8.0", optional = true, default-features = false, features = [
    "http1",
    "server",
] }
hyper-util = { version = "0.1.18", optional = true, default-features = false, features = [
    "tokio",
    "http1",
    "server",
] }
http-body-util = { version = "0.1.3", optional = true }
may = { version = "0.3.51", optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = { version = "2.0.5", optional = true }
memmap2 = { version = "0.9.9", optional = true, default-features = false }
once_cell = { version = "1.21.3", optional = true, default-features = false, features = [
    "std",
] }
rand = { version = "0.9.2", optional = true }
rustls = { version = "0.23.35", optional = true, default-features = false, features = [
    "aws_lc_rs",
    "prefer-post-quantum",
    "std",
    "tls12",
] }
rustls-pemfile = { version = "2.2.0", optional = true, default-features = false, features = [
    "std",
] }
sha1 = { version = "0.10.6", optional = true, default-features = false, features = [
    "std",
] }
sha2 = { version = "0.10.9", optional = true, default-features = false, features = [
    "std",
] }
socket2 = { version = "0.6.1", optional = true, default-features = false, features = [
    "all",
] }
tokio = { version = "1.48.0", optional = true, default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
wtransport = { version = "0.6.1", optional = true, default-features = false, features = [
    "ring",
] }
zstd = { version = "0.13.3", optional = true }

# unix (non-android/ios) only deps
[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "ios")))'.dependencies]
foundationdb-sys = { version = "0.10.0", optional = true, default-features = false, features = [
    "fdb-7_3",
] }

# linux-only deps
[target.'cfg(target_os = "linux")'.dependencies]
futures-rustls = { version = "0.26.0", optional = true, default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
glommio = { version = "0.9.0", optional = true, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
quinn = { version = "0.11.9", optional = true, default-features = false, features = [
    "runtime-async-std",
    "rustls",
] }

[features]
default = ["net-h1-server", "rt-tokio"]
db-fdb = ["foundationdb-sys", "crossbeam"]
net-file-server = [
    "brotli",
    "dashmap",
    "flate2",
    "httpdate",
    "memmap2",
    "mime_guess",
    "mime",
    "zstd",
]
net-h1-server = [
    "arc-swap",
    "async-trait",
    "boring",
    "bytes",
    "dashmap",
    "heapless",
    "http",
    "httparse",
    "httpdate",
    "may",
    "once_cell",
    "socket2",
]
net-h2-server = [
    "async-trait",
    "bytes",
    "dashmap",
    "futures-lite",
    "h2",
    "http",
    "hyper",
    "hyper-util",
    "http-body-util",
    "rustls-pemfile",
    "rustls",
    "socket2",
]
net-h3-server = [
    "async-trait",
    "bytes",
    "dashmap",
    "futures-lite",
    "h3-quinn",
    "h3",
    "http",
    "quinn",
    "rustls-pemfile",
    "rustls",
    "socket2",
    "tokio",
]
net-ratelimiter = ["governor", "hmac", "sha2", "base64", "rand", "hex"]
net-ws-server = ["base64", "sha1"]
net-wt-server = [
    "async-trait",
    "bytes",
    "dashmap",
    "rustls-pemfile",
    "tokio",
    "wtransport",
]

rt-glommio = ["futures-rustls", "glommio", "tokio"]
rt-tokio = ["tokio", "tokio-rustls"]
rt-may = ["may"]

stm-sender = ["crossbeam", "glib", "gstreamer", "gstreamer-video"]
stm-receiver = ["glib", "gstreamer", "gstreamer-app", "gstreamer-video"]

[dev-dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
dashmap = { version = "6.1.0", default-features = false, features = ["rayon"] }
http = { version = "1.3.1", default-features = false, features = ["std"] }
nonzero_ext = { version = "0.3.0", default-features = false, features = [
    "std",
] }
num_cpus = { version = "1.17.0" }
rcgen = { version = "0.14.5" }
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "http2",
    "http3",
] }
rustls = { version = "0.23.32", default-features = false, features = [
    "aws_lc_rs",
    "prefer-post-quantum",
    "std",
    "tls12",
] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
tungstenite = { version = "0.28.0" }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
] }

[build-dependencies]
chrono = { version = "0.4.42" }
