[package]
name = "sib-techempower"
version = "0.0.1"
authors = ["mail@pooya.ai"]
description = "A high-performance, secure, and cross-platform modules optimized for efficiency, scalability, and reliability."
documentation = "https://docs.rs/sib"
edition = "2024"
keywords = ["sib", "networking", "real-time", "streaming", "web"]
license = "Apache-2.0"
repository = "https://github.com/PooyaEimandar/sib"
categories = ["development-tools"]
readme = "README.md"

[dependencies]
sib = { path = "../", default-features = false, features = ["net-h1-server"] }
arc-swap = "1.7.1"
futures-lite = "2.6.1"
futures-util = "0.3.31"
glommio = { version = "0.9.0", default-features = false }
httpdate = "1.0.3"
mimalloc = "0.1.48"
num_cpus = "1.17.0"
once_cell = "1.21.3"


[profile.release]
opt-level = 3            # Consider "3" for max speed, but "z" gives small size & good cache perf
lto = true                # Full Link Time Optimization (best performance, slower build)
codegen-units = 1          # Forces whole-program optimization (slower compile, faster runtime)
panic = "abort"            # Smaller, faster code; no stack unwinding
strip = "symbols"          # Remove symbols for smaller binary and possibly faster load
debug = false              # Don't include debug info
incremental = false        # Disable incremental compilation in release